Add cloc, cscope, nmap to base.yml.

--- a/ubuntu/base.yml
+++ b/ubuntu/base.yml
@@ -7,8 +7,11 @@
     - aptitude
     - ack-grep
     - byobu
+    - cloc
+    - cscope
     - curl
     - htop
+    - nmap
     - ranger
     - rlwrap
     - tig
