Set pip cache to /var/cache/pip.
Pip cache is like apt/yum/pacman cache, which should be shared betweeen
different system users.

--- a/ubuntu/python.yml
+++ b/ubuntu/python.yml
@@ -28,9 +28,16 @@
     - /home/vagrant/.bashrc
     - /home/vagrant/.zshrc
 
+- name: ensure proper permission of $HOME/.pip
+  sudo: yes
+  file: dest=/home/vagrant/.pip
+        state=directory
+        owner=vagrant group=vagrant
+        recurse=yes
+
 - name: make pip download cache directory
-  sudo: no
-  file: dest=/home/vagrant/.pip/ state=directory
+  sudo: yes
+  file: dest=/var/cache/pip/ state=directory
 
 - name: enable pip cache, set pip index-url
   sudo: no
