--- a/ubuntu/files/pip.conf
+++ b/ubuntu/files/pip.conf
@@ -1,4 +1,4 @@
 [global]
-download_cache = ~/.pip/cache
+download_cache = /var/cache/pip
 index_url=https://pypi.python.org/simple/
 extra_index_url=http://e.pypi.python.org/simple/
