--- a/ubuntu/hackbook.yml
+++ b/ubuntu/hackbook.yml
@@ -2,6 +2,8 @@
 # Playbook to bake a bare bone ubuntu box to a hacker's box
 
 - hosts: vagrant
+  vars:
+    whoami: vagrant
   tasks:
     - include: apt.yml
     - include: base.yml
