Ensure $HOME/.bashrc is present.
Some linux distro didn't provide a default .bashrc(such as Linux Mint 15),
so we should 'touch' it before installing hackerrc/virtualenvwrapper.

--- a/ubuntu/base.yml
+++ b/ubuntu/base.yml
@@ -16,3 +16,7 @@
     - ranger
     - rlwrap
     - tig
+
+# (HACK): Some linux distributions didn't provide a default .bashrc.
+- name: ensure $HOME/.bashrc is present
+  command: touch /home/{{whoami}}/.bashrc
